# covalent

./: .gitignore  Cargo.toml  Makefile  capsule.toml  deployment.toml
ckb-contracts/: capsule.toml
ckb-contracts/covalent-lock-script/: Cargo.toml
ckb-contracts/covalent-lock-script/src/: main.rs
ckb-contracts/covalent-type-script/: Cargo.toml
config/: covalent.toml
contracts/covalent-lock-script/src/: main.rs
contracts/covalent-type-script/: Cargo.toml
contracts/covalent-type-script/src/: main.rs
data_avail/: Cargo.toml
layer2/: Cargo.toml
layer2/src/: api.rs  chain.rs  config.rs  consensus.rs  executor.rs  main.rs  mempool.rs  merkle.rs  primitive.rs  trie.rs  types.rs
layer3/: Cargo.toml
layer3/src/: consensus.rs  executor.rs  main.rs  settlement.rs  types.rs
layer3/src/auxiliaries/: chain.rs  common.rs  genesis.rs  mempool.rs  mod.rs  oracle.rs  relay.rs  relayer.rs  smt.rs  store.rs  wallet.rs
share/: Cargo.toml
types/: Cargo.toml  Makefile
types/schemas/: basic.mol  cell.mol  witness.mol
watchtower/: Cargo.toml
