[package]
name = "layer2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake3 = "1.3"
bytes = { version = "1.3", features = ["serde"] }
clap = "4.0"
cita_trie = "4.0"
dashmap = "5.4"
derive_more = "0.99"
env_logger = "0.10"
ethereum-types = "0.14"
jsonrpsee = { version = "0.16", features = ["macros", "server"]}
log = "0.4"
num_enum = "0.5"
ophelia = "0.3"
ophelia-secp256k1 = "0.3"
rlp = "0.5"
rlp-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
static_merkle_tree = "1.1"
tokio = { version = "1.23", features = ["macros", "rt", "time"] }
toml = "0.5"
