[package]
name = "layer3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
blake2b-ref = "0.3.1"
merkle-cbt = "0.3"
thiserror = "1.0"
primitive-types = { version = "0.12.1", default-features = false, features = ["serde_no_std"]}
secp256k1 = { version = "0.25", features = ["recovery", "rand-std", "bitcoin-hashes-std", "global-context"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
sha3 = "0.10"
sled = "0.34"
sparse-merkle-tree = { version = "0.6.1", default-features = false, features = ["trie"] }
tempfile = "3"
