[package]
name = "covalent-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["molecule/std", "no-std-compat/std"]
contract = []


[dependencies]
cfg-if = "1.0"
molecule = { version = "0.7", default-features = false }
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
blake2b-ref = "0.3"
